# judgy_buddy

./: .gitignore  API_CONTRACTS.md  OPTION2_PROGRESS.md  PROJECT_PLANNING.md  README.md  pyproject.toml  start_all_services.sh
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ImageUpload.css  ImageUpload.jsx  RoastDisplay.css  RoastDisplay.jsx
libs/common/: config.py  schemas.py  utils.py
services/_deprecated_body_analysis/: run.sh
services/_deprecated_demographics/: run.sh
services/_deprecated_demographics/app/: main.py
services/_deprecated_object_scene_detection/: run.sh
services/_deprecated_object_scene_detection/app/api/: routes.py
services/_deprecated_quality_aesthetics/: run.sh
services/_deprecated_quality_aesthetics/app/: main.py
services/body_analysis/app/: main.py
services/body_analysis/app/api/: routes.py
services/demographics/app/api/: routes.py
services/face_analysis/: requirements.txt  run.sh
services/face_analysis/app/: config.py  main.py
services/face_analysis/app/api/: routes.py
services/face_analysis/app/services/: face_analyzer.py  model_manager.py
services/image_processing_orchestrator/: requirements.txt  run.sh
services/image_processing_orchestrator/app/: config.py  main.py
services/image_processing_orchestrator/app/api/: routes.py
services/image_processing_orchestrator/app/services/: orchestrator.py
services/llm_inferencer/: requirements.txt  run.sh
services/llm_inferencer/app/: config.py  main.py
services/llm_inferencer/app/api/: routes.py
services/llm_inferencer/app/services/: llm_manager.py  roast_generator.py
services/main_orchestrator/: README.md  requirements.txt  run.sh
services/main_orchestrator/app/: config.py  main.py
services/object_scene_detection/app/: main.py
services/vlm_scene_analysis/: run.sh
services/vlm_scene_analysis/app/: config.py  main.py
tests/mock_services/: mock_image_processing_orchestrator.py  mock_llm_inferencer.py  run_all_mocks.sh  test_end_to_end.sh
tests/unit/: test_image_processing_orchestrator.py  test_main_orchestrator.py
(+6 files in other folders)
